fix: correção ndos testes para novo contexto