@@ -1,17 +1,22 @@
 package com.marcaaiback.service;
 
-import com.marcaaiback.exception.OperacaoNaoPermitidaException;
+import com.marcaaiback.exception.EntidadeNaoEncontradaException;
+import com.marcaaiback.exception.NaoAutorizadoException;
+import com.marcaaiback.exception.RecursoDuplicadoException;
 import com.marcaaiback.jwt.JwtToken;
 import com.marcaaiback.jwt.JwtUtils;
-import com.marcaaiback.model.dto.admin.AdminRequest;
-import com.marcaaiback.model.dto.admin.AdminResponse;
+import com.marcaaiback.model.dto.admin.*;
 import com.marcaaiback.model.dto.admin.login.LoginRequest;
 import com.marcaaiback.model.dto.admin.senha.AlterarSenhaRequest;
+import com.marcaaiback.model.dto.viacep.ViaCEPResponse;
 import com.marcaaiback.model.entity.Admin;
+import com.marcaaiback.model.entity.Endereco;
 import com.marcaaiback.model.entity.SenhaResetToken;
 import com.marcaaiback.repository.AdminRepository;
 import com.marcaaiback.repository.SenhaResetTokenRepository;
 import jakarta.persistence.EntityNotFoundException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -20,83 +25,114 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class AdminServiceTest {
 
-    @Mock private AdminRepository adminRepository;
-    @Mock private PasswordEncoder passwordEncoder;
-    @Mock private SenhaResetTokenRepository tokenRepository;
-    @Mock private EmailService emailService;
-    @Mock private JwtUtils jwtUtils;
+    @Mock AdminRepository adminRepository;
+    @Mock PasswordEncoder passwordEncoder;
+    @Mock SenhaResetTokenRepository tokenRepository;
+    @Mock EmailService emailService;
+    @Mock JwtUtils jwtUtils;
+    @Mock ViaCEPService viaCEPService;
 
-    @InjectMocks
-    private AdminService adminService;
+    @InjectMocks AdminService adminService;
 
-    private Admin criarAdmin() {
-        Admin a = new Admin();
-        a.setId(1L);
-        a.setNome("Admin");
-        a.setEmail("admin@email.com");
-        a.setTelefone("11999998888");
-        a.setSenha("senhaCriptografada");
-        return a;
+    private Admin adminBase;
+    private EnderecoRequest enderecoRequest;
+
+    @BeforeEach
+    void setUp() {
+        Endereco endereco = new Endereco();
+        endereco.setRua("Rua A");
+        endereco.setNumero("10");
+        endereco.setBairro("Centro");
+        endereco.setCidade("Recife");
+        endereco.setEstado("PE");
+        endereco.setCep("50000000");
+
+        adminBase = Admin.builder()
+                .id(1L)
+                .nome("Admin Teste")
+                .email("admin@email.com")
+                .telefone("81999999999")
+                .senha("senhaEncoded")
+                .endereco(endereco)
+                .build();
+
+        enderecoRequest = EnderecoRequest.builder()
+                .rua("Rua A")
+                .numero("10")
+                .bairro("Centro")
+                .cep("50000000")
+                .build();
     }
 
-    private AdminRequest criarRequest() {
-        AdminRequest r = new AdminRequest();
-        r.setNome("Admin");
-        r.setEmail("admin@email.com");
-        r.setTelefone("11999998888");
-        r.setSenha("senha123");
-        r.setConfirmaSenha("senha123");
-        return r;
-    }
-
-    // ---- criarAdmin ----
+    // ── criarAdmin ──────────────────────────────────────────────────────────────
 
     @Test
-    void deveCriarAdminComSucesso() {
-        when(adminRepository.findAll()).thenReturn(List.of());
-        when(passwordEncoder.encode("senha123")).thenReturn("hash");
-        when(adminRepository.save(any())).thenReturn(criarAdmin());
+    @DisplayName("criarAdmin: sucesso quando não há admin cadastrado")
+    void criarAdmin_sucesso() {
+        AdminRequest request = new AdminRequest("Admin", "81999999999", "admin@email.com",
+                enderecoRequest, "senha123", "senha123");
 
-        AdminResponse response = adminService.criarAdmin(criarRequest());
+        ViaCEPResponse viacep = new ViaCEPResponse();
+        viacep.setCep("50000-000");
+        viacep.setBairro("Centro");
+        viacep.setLocalidade("Recife");
+        viacep.setUf("PE");
 
-        assertThat(response.getNome()).isEqualTo("Admin");
+        when(adminRepository.findAll()).thenReturn(Collections.emptyList());
+        when(viaCEPService.buscarEnderecoPeloCEP(anyString())).thenReturn(viacep);
+        when(passwordEncoder.encode(anyString())).thenReturn("encoded");
+        when(adminRepository.save(any())).thenReturn(adminBase);
+
+        AdminResponse response = adminService.criarAdmin(request);
+
+        assertThat(response).isNotNull();
+        assertThat(response.getId()).isEqualTo(1L);
+        verify(adminRepository).save(any());
     }
 
     @Test
-    void deveLancarExcecaoQuandoAdminJaExiste() {
-        when(adminRepository.findAll()).thenReturn(List.of(criarAdmin()));
+    @DisplayName("criarAdmin: lança RecursoDuplicadoException quando admin já existe")
+    void criarAdmin_adminJaExiste() {
+        when(adminRepository.findAll()).thenReturn(List.of(adminBase));
 
-        assertThatThrownBy(() -> adminService.criarAdmin(criarRequest()))
-                .isInstanceOf(OperacaoNaoPermitidaException.class)
+        AdminRequest request = new AdminRequest("Admin", "81999999999", "admin@email.com",
+                enderecoRequest, "senha123", "senha123");
+
+        assertThatThrownBy(() -> adminService.criarAdmin(request))
+                .isInstanceOf(RecursoDuplicadoException.class)
                 .hasMessageContaining("Já existe um administrador");
     }
 
     @Test
-    void deveLancarExcecaoQuandoSenhasNaoConferem() {
-        when(adminRepository.findAll()).thenReturn(List.of());
+    @DisplayName("criarAdmin: lança IllegalArgumentException quando senhas não coincidem")
+    void criarAdmin_senhasNaoCoincidem() {
+        when(adminRepository.findAll()).thenReturn(Collections.emptyList());
 
-        AdminRequest request = criarRequest();
-        request.setConfirmaSenha("outraSenha");
+        AdminRequest request = new AdminRequest("Admin", "81999999999", "admin@email.com",
+                enderecoRequest, "senha123", "outraSenha");
 
         assertThatThrownBy(() -> adminService.criarAdmin(request))
                 .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("não coincidem");
+                .hasMessageContaining("senhas não coincidem");
     }
 
-    // ---- buscar ----
+    // ── buscar ──────────────────────────────────────────────────────────────────
 
     @Test
-    void deveBuscarAdminComSucesso() {
-        when(adminRepository.findAll()).thenReturn(List.of(criarAdmin()));
+    @DisplayName("buscar: retorna admin existente")
+    void buscar_sucesso() {
+        when(adminRepository.findAll()).thenReturn(List.of(adminBase));
 
         AdminResponse response = adminService.buscar();
 
@@ -104,151 +140,240 @@ class AdminServiceTest {
     }
 
     @Test
-    void deveLancarExcecaoQuandoAdminNaoEncontrado() {
-        when(adminRepository.findAll()).thenReturn(List.of());
+    @DisplayName("buscar: lança EntityNotFoundException quando não há admin")
+    void buscar_semAdmin() {
+        when(adminRepository.findAll()).thenReturn(Collections.emptyList());
 
         assertThatThrownBy(() -> adminService.buscar())
                 .isInstanceOf(EntityNotFoundException.class);
     }
 
-    // ---- atualizar ----
+    // ── atualizar ───────────────────────────────────────────────────────────────
 
     @Test
-    void deveAtualizarAdminComSucesso() {
-        Admin admin = criarAdmin();
-        when(adminRepository.findAll()).thenReturn(List.of(admin));
-        when(adminRepository.save(any())).thenReturn(admin);
+    @DisplayName("atualizar: sucesso com dados válidos")
+    void atualizar_sucesso() {
+        AdminRequest request = new AdminRequest("Novo Nome", "81988888888", "novo@email.com",
+                null, "novaSenha1", "novaSenha1");
 
-        AdminResponse response = adminService.atualizar(criarRequest());
+        when(adminRepository.findAll()).thenReturn(List.of(adminBase));
+        when(adminRepository.save(any())).thenReturn(adminBase);
 
-        assertThat(response.getNome()).isEqualTo("Admin");
+        AdminResponse response = adminService.atualizar(request);
+
+        assertThat(response).isNotNull();
+        verify(adminRepository).save(any());
     }
 
-    // ---- autenticar ----
+    // ── alterarSenha ─────────────────────────────────────────────────────────────
 
     @Test
-    void deveAutenticarComSucesso() {
-        Admin admin = criarAdmin();
-        LoginRequest request = new LoginRequest();
-        request.setLogin("admin@email.com");
-        request.setSenha("senha123");
+    @DisplayName("alterarSenha: sucesso com senha atual correta")
+    void alterarSenha_sucesso() {
+        AlterarSenhaRequest request = new AlterarSenhaRequest("senhaAtual", "novaSenha1", "novaSenha1");
 
-        when(adminRepository.findByEmailOrTelefone("admin@email.com", "admin@email.com"))
-                .thenReturn(Optional.of(admin));
-        when(passwordEncoder.matches("senha123", "senhaCriptografada")).thenReturn(true);
-        when(jwtUtils.gerarToken(1L, "admin@email.com")).thenReturn(new JwtToken("token123"));
+        when(adminRepository.findById(1L)).thenReturn(Optional.of(adminBase));
+        when(passwordEncoder.matches("senhaAtual", "senhaEncoded")).thenReturn(true);
+        when(passwordEncoder.encode("novaSenha1")).thenReturn("novaEncoded");
+        when(adminRepository.save(any())).thenReturn(adminBase);
 
-        AdminResponse response = adminService.autenticar(request);
+        AdminResponse response = adminService.alterarSenha(1L, request);
 
-        assertThat(response.getToken()).isEqualTo("token123");
-    }
-
-    @Test
-    void deveLancarExcecaoQuandoSenhaIncorreta() {
-        Admin admin = criarAdmin();
-        LoginRequest request = new LoginRequest();
-        request.setLogin("admin@email.com");
-        request.setSenha("senhaErrada");
-
-        when(adminRepository.findByEmailOrTelefone("admin@email.com", "admin@email.com"))
-                .thenReturn(Optional.of(admin));
-        when(passwordEncoder.matches("senhaErrada", "senhaCriptografada")).thenReturn(false);
-
-        assertThatThrownBy(() -> adminService.autenticar(request))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("Credenciais inválidas");
+        assertThat(response).isNotNull();
+        verify(adminRepository).save(any());
     }
 
     @Test
-    void deveLancarExcecaoQuandoLoginVazio() {
-        LoginRequest request = new LoginRequest();
-        request.setLogin("");
-        request.setSenha("senha123");
+    @DisplayName("alterarSenha: lança IllegalArgumentException com senha atual errada")
+    void alterarSenha_senhaAtualErrada() {
+        AlterarSenhaRequest request = new AlterarSenhaRequest("senhaErrada", "novaSenha1", "novaSenha1");
 
-        assertThatThrownBy(() -> adminService.autenticar(request))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("obrigatórios");
-    }
-
-    // ---- alterarSenha ----
-
-    @Test
-    void deveAlterarSenhaComSucesso() {
-        Admin admin = criarAdmin();
-        when(adminRepository.findById(1L)).thenReturn(Optional.of(admin));
-        when(passwordEncoder.matches("senhaAtual", "senhaCriptografada")).thenReturn(true);
-        when(passwordEncoder.encode("novaSenha")).thenReturn("novoHash");
-
-        AlterarSenhaRequest request = new AlterarSenhaRequest();
-        request.setSenhaAtual("senhaAtual");
-        request.setNovaSenha("novaSenha");
-        request.setConfirmarNovaSenha("novaSenha");
-
-        assertThatCode(() -> adminService.alterarSenha(1L, request))
-                .doesNotThrowAnyException();
-        verify(adminRepository).save(admin);
-    }
-
-    @Test
-    void deveLancarExcecaoQuandoSenhaAtualIncorreta() {
-        Admin admin = criarAdmin();
-        when(adminRepository.findById(1L)).thenReturn(Optional.of(admin));
-        when(passwordEncoder.matches("errada", "senhaCriptografada")).thenReturn(false);
-
-        AlterarSenhaRequest request = new AlterarSenhaRequest();
-        request.setSenhaAtual("errada");
-        request.setNovaSenha("novaSenha");
-        request.setConfirmarNovaSenha("novaSenha");
+        when(adminRepository.findById(1L)).thenReturn(Optional.of(adminBase));
+        when(passwordEncoder.matches("senhaErrada", "senhaEncoded")).thenReturn(false);
 
         assertThatThrownBy(() -> adminService.alterarSenha(1L, request))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("Senha atual incorreta");
     }
 
-    // ---- validarToken ----
+    @Test
+    @DisplayName("alterarSenha: lança EntityNotFoundException quando admin não existe")
+    void alterarSenha_adminNaoEncontrado() {
+        AlterarSenhaRequest request = new AlterarSenhaRequest("senha", "nova1234", "nova1234");
+        when(adminRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> adminService.alterarSenha(99L, request))
+                .isInstanceOf(EntityNotFoundException.class);
+    }
+
+    // ── autenticar ───────────────────────────────────────────────────────────────
 
     @Test
-    void deveValidarTokenComSucesso() {
-        SenhaResetToken reset = new SenhaResetToken();
-        reset.setToken("abc");
-        reset.setExpiracao(LocalDateTime.now().plusMinutes(10));
+    @DisplayName("autenticar: sucesso com credenciais válidas")
+    void autenticar_sucesso() {
+        LoginRequest request = new LoginRequest("admin@email.com", "senha123");
 
-        when(tokenRepository.findByToken("abc")).thenReturn(Optional.of(reset));
+        when(adminRepository.findByEmailOrTelefone(anyString(), anyString()))
+                .thenReturn(Optional.of(adminBase));
+        when(passwordEncoder.matches("senha123", "senhaEncoded")).thenReturn(true);
+        when(jwtUtils.gerarToken(anyLong(), anyString())).thenReturn(new JwtToken("token.jwt"));
 
-        assertThatCode(() -> adminService.validarToken("abc"))
-                .doesNotThrowAnyException();
+        AuthResponse response = adminService.autenticar(request);
+
+        assertThat(response.getToken()).isEqualTo("token.jwt");
+        assertThat(response.getResponse().getEmail()).isEqualTo("admin@email.com");
     }
 
     @Test
-    void deveLancarExcecaoQuandoTokenExpirado() {
+    @DisplayName("autenticar: lança NaoAutorizadoException com senha incorreta")
+    void autenticar_senhaErrada() {
+        LoginRequest request = new LoginRequest("admin@email.com", "errada");
+
+        when(adminRepository.findByEmailOrTelefone(anyString(), anyString()))
+                .thenReturn(Optional.of(adminBase));
+        when(passwordEncoder.matches("errada", "senhaEncoded")).thenReturn(false);
+
+        assertThatThrownBy(() -> adminService.autenticar(request))
+                .isInstanceOf(NaoAutorizadoException.class);
+    }
+
+    @Test
+    @DisplayName("autenticar: lança IllegalArgumentException com login em branco")
+    void autenticar_loginEmBranco() {
+        LoginRequest request = new LoginRequest("", "senha");
+
+        assertThatThrownBy(() -> adminService.autenticar(request))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("obrigatórios");
+    }
+
+    @Test
+    @DisplayName("autenticar: lança EntidadeNaoEncontradaException quando admin não encontrado")
+    void autenticar_adminNaoEncontrado() {
+        LoginRequest request = new LoginRequest("naoexiste@email.com", "senha123");
+
+        when(adminRepository.findByEmailOrTelefone(anyString(), anyString()))
+                .thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> adminService.autenticar(request))
+                .isInstanceOf(EntidadeNaoEncontradaException.class);
+    }
+
+    // ── enviarEmailRedefinicao ───────────────────────────────────────────────────
+
+    @Test
+    @DisplayName("enviarEmailRedefinicao: sucesso envia email e salva token")
+    void enviarEmailRedefinicao_sucesso() {
+        when(adminRepository.findByEmail("admin@email.com")).thenReturn(Optional.of(adminBase));
+        when(tokenRepository.findByAdmin(adminBase)).thenReturn(Optional.empty());
+        when(tokenRepository.save(any())).thenAnswer(i -> i.getArgument(0));
+        doNothing().when(emailService).enviar(anyString(), anyString(), anyString());
+
+        adminService.enviarEmailRedefinicao("admin@email.com");
+
+        verify(tokenRepository).save(any());
+        verify(emailService).enviar(eq("admin@email.com"), anyString(), anyString());
+    }
+
+    @Test
+    @DisplayName("enviarEmailRedefinicao: deleta token anterior antes de criar novo")
+    void enviarEmailRedefinicao_deletaTokenAnterior() {
+        SenhaResetToken tokenAntigo = new SenhaResetToken();
+        tokenAntigo.setToken("old-token");
+        tokenAntigo.setAdmin(adminBase);
+        tokenAntigo.setExpiracao(LocalDateTime.now().plusMinutes(10));
+
+        when(adminRepository.findByEmail("admin@email.com")).thenReturn(Optional.of(adminBase));
+        when(tokenRepository.findByAdmin(adminBase)).thenReturn(Optional.of(tokenAntigo));
+        when(tokenRepository.save(any())).thenAnswer(i -> i.getArgument(0));
+        doNothing().when(emailService).enviar(anyString(), anyString(), anyString());
+
+        adminService.enviarEmailRedefinicao("admin@email.com");
+
+        verify(tokenRepository).delete(tokenAntigo);
+    }
+
+    @Test
+    @DisplayName("enviarEmailRedefinicao: lança EntityNotFoundException quando email não encontrado")
+    void enviarEmailRedefinicao_emailNaoEncontrado() {
+        when(adminRepository.findByEmail("nao@existe.com")).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> adminService.enviarEmailRedefinicao("nao@existe.com"))
+                .isInstanceOf(EntityNotFoundException.class);
+    }
+
+    // ── validarToken ─────────────────────────────────────────────────────────────
+
+    @Test
+    @DisplayName("validarToken: token válido não lança exceção")
+    void validarToken_valido() {
         SenhaResetToken reset = new SenhaResetToken();
-        reset.setToken("abc");
+        reset.setToken("token-valido");
+        reset.setAdmin(adminBase);
+        reset.setExpiracao(LocalDateTime.now().plusMinutes(10));
+
+        when(tokenRepository.findByToken("token-valido")).thenReturn(Optional.of(reset));
+
+        assertThatCode(() -> adminService.validarToken("token-valido")).doesNotThrowAnyException();
+    }
+
+    @Test
+    @DisplayName("validarToken: lança IllegalArgumentException quando token expirado")
+    void validarToken_expirado() {
+        SenhaResetToken reset = new SenhaResetToken();
+        reset.setToken("token-expirado");
+        reset.setAdmin(adminBase);
         reset.setExpiracao(LocalDateTime.now().minusMinutes(1));
 
-        when(tokenRepository.findByToken("abc")).thenReturn(Optional.of(reset));
+        when(tokenRepository.findByToken("token-expirado")).thenReturn(Optional.of(reset));
 
-        assertThatThrownBy(() -> adminService.validarToken("abc"))
+        assertThatThrownBy(() -> adminService.validarToken("token-expirado"))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("expirado");
     }
 
-    // ---- redefinirSenha ----
+    @Test
+    @DisplayName("validarToken: lança IllegalArgumentException quando token inválido")
+    void validarToken_invalido() {
+        when(tokenRepository.findByToken("invalido")).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> adminService.validarToken("invalido"))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("inválido");
+    }
+
+    // ── redefinirSenha ───────────────────────────────────────────────────────────
 
     @Test
-    void deveRedefinirSenhaComSucesso() {
-        Admin admin = criarAdmin();
+    @DisplayName("redefinirSenha: sucesso altera senha e deleta token")
+    void redefinirSenha_sucesso() {
         SenhaResetToken reset = new SenhaResetToken();
-        reset.setToken("abc");
-        reset.setAdmin(admin);
+        reset.setToken("token-ok");
+        reset.setAdmin(adminBase);
         reset.setExpiracao(LocalDateTime.now().plusMinutes(10));
 
-        when(tokenRepository.findByToken("abc")).thenReturn(Optional.of(reset));
-        when(passwordEncoder.encode("novaSenha")).thenReturn("novoHash");
+        when(tokenRepository.findByToken("token-ok")).thenReturn(Optional.of(reset));
+        when(passwordEncoder.encode("novaSenha")).thenReturn("novaEncoded");
+        when(adminRepository.save(any())).thenReturn(adminBase);
 
-        assertThatCode(() -> adminService.redefinirSenha("abc", "novaSenha"))
-                .doesNotThrowAnyException();
+        adminService.redefinirSenha("token-ok", "novaSenha");
 
-        verify(adminRepository).save(admin);
+        verify(adminRepository).save(adminBase);
         verify(tokenRepository).delete(reset);
+    }
+
+    @Test
+    @DisplayName("redefinirSenha: lança IllegalArgumentException com token expirado")
+    void redefinirSenha_tokenExpirado() {
+        SenhaResetToken reset = new SenhaResetToken();
+        reset.setToken("token-exp");
+        reset.setAdmin(adminBase);
+        reset.setExpiracao(LocalDateTime.now().minusMinutes(1));
+
+        when(tokenRepository.findByToken("token-exp")).thenReturn(Optional.of(reset));
+
+        assertThatThrownBy(() -> adminService.redefinirSenha("token-exp", "novaSenha"))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("expirado");
     }
 }
